...
    final user = context.watch<UserModel>();
    final l10n = AppLocalizations.of(context)!;
    final plantProvider = context.watch<PlantProvider>();
    final plantsDiscovered = plantProvider.plants.length;

    return Scaffold(
      key: const Key('profile_page'),
      body: Stack(
        children: [
          Positioned.fill(
            child: Image.asset(
              'assets/images/imatge_fondo1.png',
              fit: BoxFit.cover,
...
    final l10n = AppLocalizations.of(context)!;

    return Column(
      crossAxisAlignment: CrossAxisAlignment.stretch,
      children: [
        ElevatedButton.icon(
          key: const Key('logout_button'),
          onPressed: () => _logout(context),
          icon: const Icon(Icons.logout, size: 20),
          label: Text(
            l10n.profileLogout,
            style: const TextStyle(fontSize: 16, fontWeight: FontWeight.w600),
          ),
...
